--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,41 @@
 body {
             background-color: #FFFFFF;
-            margin-left: 200px;
+            margin-left: 250px;
             margin-top: 100px;
-            margin-right: 200px;
-        }
+            margin-right: 250px;
+            margin-bottom: 100px; 
+}
 
 h1 {
-    text-align-last: left;
+    text-align-last: center;
             font-size: 60px;
             color: #000;
             margin-bottom: 0px;
             font-family: Monaco, monospace;
-
-
-
 }
 
 h2 {
-    text-align-last: left;
+    text-align-last: center;
             font-size: 30px;
             color: #08E055;
             margin-top: 0px;
             margin-left: 5px;
             font-family: Monaco, monospace;
-
-
 }
 
+h3 {
+    font-size: 30px;
+    font-family: Monaco, monospace;
+    text-align: center;
+}
 
 .aboutme {
-    text-align:justify;
+    text-align:center;
     font-family: Monaco, monospace;
-    margin-left: 10px;
-    margin-right: 500px;
     font-size: 18px;
     line-height: 1.6;
+    margin-left: 300px; 
+    margin-right: 300px; 
 
 }
 
@@ -44,9 +45,6 @@ h2 {
     margin-top: 50px;
     height: 80px;
     line-height: 80px;
-    font-family: Monaco, monospace;
-    font-size: 50px;
-    text-shadow: 0.5px 0.5px whitesmoke;
     text-align: center;
 }
 
@@ -54,85 +52,7 @@ h2 {
     background-color:#11823a;
 }
 
-
-
-
-.project1 {
-    background-color: #08E055;
-    margin-left: 10px;
-    margin-top: 50px;
-    height: 80px;
+p1 {
     font-family: Monaco, monospace;
-    font-size: 50px;
-    text-shadow: 0.5px 0.5px whitesmoke;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 80px;
-}
-
-.project1:hover {
-    background-color: #11823a;
-}
-
-
-
-.project2 {
-    background-color: #08E055;
-    margin-left: 10px;
-    margin-top: 50px;
-    height: 80px;
-}
-
-.project2:hover {
-    background-color: #11823a;
-}
-
-p3 {
-    font-family: Monaco, monospace;
-    font-size: 50px;
-    margin-left: 450px;
-    margin-top: 100px;
-    text-shadow: 0.5px 0.5px whitesmoke;
-    
-
-}
-
-.project3 {
-    background-color: #08E055;
-    margin-left: 10px;
-    margin-top: 50px;
-    height: 80px;
-    
-}
-
-.project3:hover {
-    background-color: #11823a;
-}
-
-p4 {
-    font-family: Monaco, monospace;
-    font-size: 50px;
-    margin-left: 450px;
-    margin-top: 100px;
-    text-shadow: 0.5px 0.5px whitesmoke;
-}
-
-.project4 {
-    background-color: #08E055;
-    margin-left: 10px;
-    margin-top: 50px;
-    height: 80px;
-    
-}
-
-.project4:hover {
-    background-color: #11823a;
-}
-
-p5 {
-    font-family: Monaco, monospace;
-    font-size: 50px;
-    margin-left: 450px;
-    margin-top: 100px;
-    text-shadow: 0.5px 0.5px whitesmoke;
+    font-size: 40px;   
 }
